--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Compiled class file
 *.class
 
+/out
+
 # Log file
 *.log
 
@@ -21,3 +23,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+out/production/Java_AGH/META-INF/Java_AGH.kotlin_module
