--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
+
+# Created by https://www.gitignore.io/api/java
+# Edit at https://www.gitignore.io/?templates=java
+
+### Java ###
 # Compiled class file
 *.class
 
-/out
 # Log file
 *.log
-
-
 
 # BlueJ files
 *.ctxt
@@ -24,7 +26,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-out/production/Java_AGH/META-INF/Java_AGH.kotlin_module
-.idea/workspace.xml
-*.xml
-Java_AGH.iml
+
+# End of https://www.gitignore.io/api/java
